# bibadac

./: Cargo.toml  README.md
src/: arxiv_identifiers.rs  author_format.rs  bibdb.rs  bibtex.rs  bibtex_spec.rs  format.rs  lib.rs  linter.rs  main.rs  setup.rs
