[package]
name = "bibadac"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.1.0"
once_cell = "1.20.2"
reqwest = { version = "0.12.8", features = ["blocking"] }
thiserror = "1.0.64"
toml = "0.8.19"
tree-sitter = "0.22.6"
tree-sitter-bibtex = "0.1.0"
